# City-Walker

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/models/: __init__.py  core.py  errors.py
backend/app/services/: __init__.py
backend/app/services/ai_reasoning/: __init__.py  service.py
backend/app/services/cache/: __init__.py  service.py
backend/app/services/foursquare/: __init__.py  service.py
backend/app/services/osm/: __init__.py  service.py
backend/app/services/place_validator/: __init__.py  service.py
backend/app/services/route_optimizer/: __init__.py  service.py
backend/app/services/wikipedia/: __init__.py  service.py
backend/app/utils/: __init__.py  geo.py
backend/tests/: __init__.py
backend/tests/unit/: __init__.py  test_cache_service.py  test_place_validator_service.py
frontend-next/: next.config.ts  package-lock.json  package.json
frontend-next/src/app/: globals.css  layout.tsx  page.tsx
frontend-next/src/components/: Chat.tsx  DayTabs.tsx  HomeBaseInput.tsx  ImageCarousel.tsx  Map.tsx  POIPreviewCard.tsx  RouteSummaryPanel.tsx  TransportModeSelector.tsx
frontend-next/src/components/gen-ui/: ComparisonCard.tsx  DayPlanCard.tsx  ItineraryResult.tsx  POICard.tsx  PreferencesSelector.tsx  ProgressIndicator.tsx  index.ts
frontend-next/src/lib/: api.ts  config.ts
frontend-next/src/lib/ai/: tools.ts
frontend-next/src/types/: index.ts
(+4 files in other folders)
